Only process job changes if the status of a job has changed.  Generate implicit jobs on status update as well as initial insert.  Track the protocol which generated a job.  Only insert generated jobs if the {parent, protocol} that generates the job has not already been inserted. Add sequence number back to job.  Add a name field for the protocol, to give some label to the protocol.

--- a/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/job.xml
+++ b/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/job.xml
@@ -25,9 +25,11 @@
                     dta.name AS deliver_to_attribute,
                     dfa.name AS deliver_from_attribute,
                     ata.name AS assign_to_attribute,
+                    base_table.sequence_number,
 			        base_table.notes, 
                     base_table.current_log_sequence,
-			        up.name AS updated_by, base_table.update_date
+			        up.name AS updated_by, base_table.update_date,
+                    base_table.protocol
 			   FROM job base_table
 			   JOIN product s ON base_table.service = s.id
                JOIN product p ON base_table.product = p.id
