--- a/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/protocol.xml
+++ b/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/protocol.xml
@@ -9,6 +9,7 @@
         <sql><![CDATA[
             CREATE OR REPLACE VIEW readable.protocol AS 
 			 SELECT base_table.id,
+                    base_table.name,
                     rs.name AS requested_service,
 			        r.name AS requester,  
                     rp.name AS requested_product, 
