Cleanup unused columns.  Get rid of fucking pinned.

--- a/model/src/main/sql/com/chiralbehaviors/CoRE/schema/0.0.2-rc1/readable/views/agency.xml
+++ b/model/src/main/sql/com/chiralbehaviors/CoRE/schema/0.0.2-rc1/readable/views/agency.xml
@@ -11,7 +11,7 @@
 			 SELECT r.id, 
 			     r.name, 
 			     r.description,
-			     r.notes, r.pinned,
+			     r.notes,
 			     up.name AS updated_by, 
 			     r.update_date
 			   FROM agency r
