--- a/model/src/main/sql/com/chiralbehaviors/CoRE/schema/0.0.2-rc1/readable/views/status_code.xml
+++ b/model/src/main/sql/com/chiralbehaviors/CoRE/schema/0.0.2-rc1/readable/views/status_code.xml
@@ -8,7 +8,7 @@
     <changeSet id="1" author="hhildebrand">
         <sql><![CDATA[
             CREATE OR REPLACE VIEW readable.status_code AS 
-			 SELECT base_table.id, base_table.name, base_table.description, base_table.notes, base_table.pinned, base_table.fail_parent, base_table.propagate_children, up.name AS updated_by, base_table.update_date
+			 SELECT base_table.id, base_table.name, base_table.description, base_table.notes, base_table.fail_parent, base_table.propagate_children, up.name AS updated_by, base_table.update_date
 			   FROM status_code base_table
 			   JOIN agency up ON base_table.updated_by = up.id;
 			
