--- a/model/src/main/sql/com/chiralbehaviors/CoRE/schema/0.0.2-rc1/readable/views/interval.xml
+++ b/model/src/main/sql/com/chiralbehaviors/CoRE/schema/0.0.2-rc1/readable/views/interval.xml
@@ -8,7 +8,7 @@
     <changeSet id="1" author="hhildebrand">
         <sql><![CDATA[
             CREATE OR REPLACE VIEW readable.interval AS 
-			 SELECT r.id, r.name, r.description, r.notes, r.pinned, up.name AS updated_by, r.update_date
+			 SELECT r.id, r.name, r.description, r.notes, up.name AS updated_by, r.update_date
 			   FROM interval r
 			   JOIN interval up ON r.updated_by = up.id;
 			
