--- a/model/src/main/sql/com/chiralbehaviors/CoRE/schema/0.0.2-rc1/readable/views/unit_values.xml
+++ b/model/src/main/sql/com/chiralbehaviors/CoRE/schema/0.0.2-rc1/readable/views/unit_values.xml
@@ -8,10 +8,9 @@
     <changeSet id="1" author="hhildebrand">
         <sql><![CDATA[
             CREATE OR REPLACE VIEW readable.unit_values AS 
-			 SELECT uv.id, u.name AS unit, uv.sequence_number, uv.integer_value, uv.numeric_value, uv.text_value, uv.boolean_value, bv.name AS product_value, uv.notes, up.name AS updated_by, uv.update_date
+			 SELECT uv.id, u.name AS unit, uv.sequence_number, uv.integer_value, uv.numeric_value, uv.text_value, uv.boolean_value, uv.notes, up.name AS updated_by, uv.update_date
 			   FROM unit_values uv
 			   JOIN unit u ON u.id = uv.unit
-			   LEFT JOIN product bv ON bv.id = uv.product_value
 			   JOIN agency up ON up.id = uv.updated_by;
 			
 			ALTER TABLE readable.unit_values
