rename event package to job.  remove *attributes from job, chronology, meta/protocol.

--- a/model/src/main/sql/com/chiralbehaviors/CoRE/schema/0.0.2-rc1/readable/views/job.xml
+++ b/model/src/main/sql/com/chiralbehaviors/CoRE/schema/0.0.2-rc1/readable/views/job.xml
@@ -5,55 +5,34 @@
     http://www.liquibase.org/xml/ns/dbchangelog/dbchangelog-3.1.xsd"
 >
 
-    <changeSet id="1" author="hhildebrand">
-        <sql><![CDATA[
-            CREATE OR REPLACE VIEW readable.job AS 
-			 SELECT base_table.id, 
+    <changeSet id="2.0.0" author="hhildebrand">
+        <createView schemaName="readable" viewName="job"><![CDATA[
+             SELECT base_table.id, 
                     s.name AS service, 
                     r.name AS requester, 
-			        p.name AS product,  
-			        dt.name AS deliver_to, 
+                    p.name AS product,  
+                    dt.name AS deliver_to, 
                     df.name AS deliver_from, 
                     at.name AS assign_to,
-			        sc.name AS status, 
+                    sc.name AS status, 
                     base_table.quantity,
                     u.name AS quantity_unit,
-                    base_table.parent, 
-                    ra.name AS requester_attribute,
-                    sa.name AS service_attribute,
-                    pa.name AS product_attribute,
-                    dta.name AS deliver_to_attribute,
-                    dfa.name AS deliver_from_attribute,
-                    ata.name AS assign_to_attribute,
+                    base_table.parent,
                     base_table.sequence_number,
-			        base_table.notes, 
-                    base_table.current_log_sequence,
-			        up.name AS updated_by, base_table.version,
+                    base_table.notes,
+                    up.name AS updated_by, base_table.version,
                     base_table.protocol
-			   FROM job base_table
-			   JOIN product s ON base_table.service = s.id
+               FROM job base_table
+               JOIN product s ON base_table.service = s.id
                JOIN product p ON base_table.product = p.id
-			   JOIN agency at ON base_table.assign_to = at.id
+               JOIN agency at ON base_table.assign_to = at.id
                JOIN agency r ON base_table.requester = r.id
                JOIN location dt ON base_table.deliver_to = dt.id
                JOIN location df ON base_table.deliver_from = df.id
-			   JOIN status_code sc ON base_table.status = sc.id
-			   JOIN agency up ON base_table.updated_by = up.id
-               JOIN attribute ra ON base_table.requester_attribute = ra.id
-               JOIN attribute sa ON base_table.service_attribute = sa.id
-               JOIN attribute pa ON base_table.product_attribute = pa.id
-               JOIN attribute dta ON base_table.deliver_to_attribute = dta.id
-               JOIN attribute dfa ON base_table.deliver_from_attribute = dfa.id
+               JOIN status_code sc ON base_table.status = sc.id
+               JOIN agency up ON base_table.updated_by = up.id
                JOIN unit u ON base_table.quantity_unit = u.id
-               JOIN attribute ata ON base_table.assign_to_attribute = ata.id;
-			
-			ALTER TABLE readable.job
-			  OWNER TO core;
-			GRANT ALL ON TABLE readable.job TO core;
-			GRANT SELECT ON TABLE readable.job TO core_read_write;
-			GRANT SELECT ON TABLE readable.job TO core_read_only;
-            ]]>
-        </sql>
+            ]]></createView>
         <rollback>
             <dropView viewName="readable.job" />
         </rollback>
