--- a/model/src/main/sql/com/chiralbehaviors/CoRE/schema/0.0.2-rc1/readable/views/protocol.xml
+++ b/model/src/main/sql/com/chiralbehaviors/CoRE/schema/0.0.2-rc1/readable/views/protocol.xml
@@ -5,56 +5,45 @@
     http://www.liquibase.org/xml/ns/dbchangelog/dbchangelog-3.1.xsd"
 >
 
-    <changeSet id="1" author="hhildebrand">
-        <sql><![CDATA[
-            CREATE OR REPLACE VIEW readable.protocol AS 
-			 SELECT base_table.id,
-                    base_table.name,
-                    rs.name AS requested_service,
-			        r.name AS requester,  
-                    rp.name AS requested_product, 
-                    dt.name AS deliver_to, 
-                    df.name AS deliver_from,
-                    assign.name AS assign_to, 
-                    s.name AS service, 
-                    p.name AS product,
-                    base_table.quantity,
-                    u.name AS quantity_unit,
-                    ra.name AS requester_attribute,
-                    sa.name AS service_attribute,
-                    pa.name AS product_attribute,
-                    dta.name AS deliver_to_attribute,
-                    dfa.name AS deliver_from_attribute,
-                    ata.name AS assign_to_attribute,
-			        base_table.sequence_number, 
-                    base_table.notes, 
-			        up.name AS updated_by,
-                    base_table.version
-			   FROM protocol base_table
-               JOIN product rs ON base_table.requested_service = rs.id
-			   JOIN product rp ON base_table.requested_product = rp.id
-               JOIN product s ON base_table.service = s.id
-               JOIN product p ON base_table.product = p.id
-               JOIN location dt ON base_table.deliver_to = dt.id
-               JOIN location df ON base_table.deliver_from = df.id
-			   JOIN agency assign ON base_table.assign_to = assign.id
-               JOIN agency r ON base_table.requester = r.id
-			   JOIN agency up ON base_table.updated_by = up.id
-               JOIN unit u ON base_table.quantity_unit = u.id
-               JOIN attribute ra ON base_table.requester_attribute = ra.id
-               JOIN attribute sa ON base_table.service_attribute = sa.id
-               JOIN attribute pa ON base_table.product_attribute = pa.id
-               JOIN attribute dta ON base_table.deliver_to_attribute = dta.id
-               JOIN attribute dfa ON base_table.deliver_from_attribute = dfa.id
-               JOIN attribute ata ON base_table.assign_to_attribute = ata.id;
-			
-			ALTER TABLE readable.protocol
-			  OWNER TO core;
-			GRANT ALL ON TABLE readable.protocol TO core;
-			GRANT SELECT ON TABLE readable.protocol TO core_read_write;
-			GRANT SELECT ON TABLE readable.protocol TO core_read_only;
-            ]]>
-        </sql>
+    <changeSet id="2.0.0" author="hhildebrand"> 
+        <createView schemaName="readable" viewName="protocol"><![CDATA[
+             SELECT base_table.id,
+                base_table.name,
+                s.name AS service,
+                p.name AS product,
+                r.name AS requester,
+                dt.name AS deliver_to,
+                df.name AS deliver_from,
+                assign.name AS assign_to,
+                base_table.quantity,
+                u.name AS quantity_unit, 
+                cs.name AS child_service,
+                cp.name AS child_product,
+                cat.name AS child_assign_to,
+                base_table.child_quantity,
+                cqu.name AS child_quantity_unit,
+                cdt.name AS child_deliver_to,
+                cdf.name AS child_deliver_from, 
+                base_table.sequence_number,
+                base_table.notes,
+                up.name AS updated_by,
+                base_table.version
+               FROM ruleform.protocol base_table
+               JOIN ruleform.product s ON base_table.service = s.id
+               JOIN ruleform.product p ON base_table.product = p.id
+               JOIN ruleform.agency r ON base_table.requester = r.id
+               JOIN ruleform.location dt ON base_table.deliver_to = dt.id
+               JOIN ruleform.location df ON base_table.deliver_from = df.id
+               JOIN ruleform.agency assign ON base_table.assign_to = assign.id
+               JOIN ruleform.unit u ON base_table.quantity_unit = u.id
+               JOIN ruleform.unit cqu ON base_table.child_quantity_unit = cqu.id 
+               JOIN ruleform.product cs ON base_table.child_service = cs.id
+               JOIN ruleform.product cp ON base_table.child_product = cp.id
+               JOIN ruleform.agency cat ON base_table.child_assign_to = cat.id
+               JOIN ruleform.location cdt ON base_table.child_deliver_to = cdt.id
+               JOIN ruleform.location cdf ON base_table.child_deliver_from = cdf.id
+               JOIN ruleform.agency up ON base_table.updated_by = up.id
+            ]]></createView>
         <rollback>
             <dropView viewName="readable.protocol" />
         </rollback>
