--- a/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/interval.xml
+++ b/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/interval.xml
@@ -1,25 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<databaseChangeLog xmlns="http://www.liquibase.org/xml/ns/dbchangelog"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<databaseChangeLog xmlns="http://www.liquibase.org/xml/ns/dbchangelog" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://www.liquibase.org/xml/ns/dbchangelog
-    http://www.liquibase.org/xml/ns/dbchangelog/dbchangelog-3.1.xsd">
+    http://www.liquibase.org/xml/ns/dbchangelog/dbchangelog-3.1.xsd"
+>
 
     <changeSet id="1" author="hhildebrand">
-        <sql><![CDATA[
-            CREATE OR REPLACE VIEW readable.interval AS 
-			 SELECT r.id, r.name, r.description, r.start, su.name AS start_unit, r.duration, du.name AS duration_unit, r.notes, up.name AS updated_by, r.version
+        <createView schemaName="readable" viewName="interval"><![CDATA[ 
+			 SELECT r.id, r.name, r.description, r.notes, up.name AS updated_by, r.version
 			   FROM interval r
-			   JOIN interval up ON r.updated_by = up.id
-               JOIN unit su ON r.start_unit = su.id
-               JOIN unit du ON r.duration_unit = du.id;
-			
-			ALTER TABLE readable.interval
-			  OWNER TO core;
+			   JOIN interval up ON r.updated_by = up.id 
             ]]>
-        </sql>
+        </createView>
         <rollback>
-            <dropView viewName="readable.interval" />
+            <dropView schemaName="readable" viewName="interval" />
         </rollback>
     </changeSet>
 </databaseChangeLog>
