--- a/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/relationship_attribute.xml
+++ b/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/relationship_attribute.xml
@@ -6,8 +6,7 @@
     http://www.liquibase.org/xml/ns/dbchangelog/dbchangelog-3.1.xsd">
 
     <changeSet id="1" author="hhildebrand">
-        <sql><![CDATA[
-            CREATE OR REPLACE VIEW readable.relationship_attribute AS 
+        <createView schemaName="readable" viewName="relationship_attribute"><![CDATA[
 			 SELECT ra.id, 
                     r.name AS relationship, 
                     a.name AS attribute, 
@@ -29,7 +28,7 @@
 			ALTER TABLE readable.relationship_attribute
 			  OWNER TO core;
             ]]>
-        </sql>
+        </createView>
         <rollback>
             <dropView viewName="readable.relationship_attribute" />
         </rollback>
