--- a/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/relationship_network.xml
+++ b/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/relationship_network.xml
@@ -6,8 +6,7 @@
     http://www.liquibase.org/xml/ns/dbchangelog/dbchangelog-3.1.xsd">
 
 	<changeSet id="1" author="hhildebrand">
-		<sql><![CDATA[
-            CREATE OR REPLACE VIEW readable.relationship_network AS 
+        <createView schemaName="readable" viewName="relationship_network"><![CDATA[
 			 SELECT n.id, 
                     p.name AS parent, 
                     rel.name AS relationship, 
@@ -28,7 +27,7 @@
 			ALTER TABLE readable.relationship_network
 			  OWNER TO core;
             ]]>
-		</sql>
+		</createView>
 		<rollback>
 			<dropView viewName="readable.relationship_network" />
 		</rollback>
