--- a/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/agency.xml
+++ b/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/agency.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<databaseChangeLog xmlns="http://www.liquibase.org/xml/ns/dbchangelog"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<databaseChangeLog xmlns="http://www.liquibase.org/xml/ns/dbchangelog" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://www.liquibase.org/xml/ns/dbchangelog
-    http://www.liquibase.org/xml/ns/dbchangelog/dbchangelog-3.1.xsd">
+    http://www.liquibase.org/xml/ns/dbchangelog/dbchangelog-3.1.xsd"
+>
 
     <changeSet id="2.0.0" author="hhildebrand">
-        <sql><![CDATA[
-            CREATE OR REPLACE VIEW readable.agency AS 
+        <createView viewName="agency" schemaName="readable" replaceIfExists="true"><![CDATA[
 			 SELECT r.id, 
 			     r.name, 
 			     r.description,
@@ -15,12 +14,9 @@
 			     up.name AS updated_by, 
 			     r.version
 			   FROM agency r
-			   JOIN agency up ON r.updated_by = up.id;
-			
-			ALTER TABLE readable.agency
-			  OWNER TO core;
+			   JOIN agency up ON r.updated_by = up.id; 
             ]]>
-        </sql>
+        </createView>
         <rollback>
             <dropView viewName="readable.agency" />
         </rollback>
