--- a/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/agency_attribute_authorization.xml
+++ b/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/agency_attribute_authorization.xml
@@ -6,8 +6,7 @@
 >
 
     <changeSet id="2.0.0" author="hhildebrand">
-        <sql><![CDATA[
-            CREATE OR REPLACE VIEW readable.agency_attribute_authorization AS 
+        <createView viewName="agency_attribute_authorization" schemaName="readable" replaceIfExists="true"><![CDATA[
              SELECT     base_table.id ,
                 res.name AS grouping_agency, 
                 cls.name AS classification, 
@@ -28,16 +27,10 @@
 			 LEFT JOIN attribute att ON base_table.authorized_attribute = att.id
 			 LEFT JOIN agency up ON base_table.updated_by = up.id
              WHERE base_table.authorized_attribute IS NOT NULL;
-			
-			ALTER TABLE readable.agency_attribute_authorization
-			  OWNER TO core;
-			GRANT ALL ON TABLE readable.agency_attribute_authorization TO core;
-			GRANT SELECT ON TABLE readable.agency_attribute_authorization TO core_read_write;
-			GRANT SELECT ON TABLE readable.agency_attribute_authorization TO core_read_only;
             ]]>
-        </sql>
+        </createView>
         <rollback>
-            <dropView viewName="readable.agency_attribute_authorization" />
+            <dropView schemaName="readable" viewName="agency_attribute_authorization" />
         </rollback>
     </changeSet>
 </databaseChangeLog>
