--- a/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/interval_network_authorization.xml
+++ b/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/interval_network_authorization.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<databaseChangeLog xmlns="http://www.liquibase.org/xml/ns/dbchangelog"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<databaseChangeLog xmlns="http://www.liquibase.org/xml/ns/dbchangelog" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://www.liquibase.org/xml/ns/dbchangelog
-    http://www.liquibase.org/xml/ns/dbchangelog/dbchangelog-3.1.xsd">
+    http://www.liquibase.org/xml/ns/dbchangelog/dbchangelog-3.1.xsd"
+>
 
     <changeSet id="2.0.0" author="hparry">
-        <sql><![CDATA[
-        CREATE OR REPLACE VIEW readable.interval_network_authorization AS 
+        <createView viewName="interval_network_authorization" schemaName="readable" replaceIfExists="true"><![CDATA[
             SELECT 
                 classification.name as classification,
                 classifier.name as classifier,
@@ -25,7 +24,7 @@
             ALTER TABLE readable.interval_network_authorization
               OWNER TO core;
             ]]>
-        </sql>
+        </createView>
         <rollback>
             <dropView viewName="readable.interval_network_authorization" />
         </rollback>
